layer.conf: Updated to wild-card subdirectories
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,8 +2,8 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-mono/*/*.bb \
-            ${LAYERDIR}/recipes-mono/*/*.bbappend"
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "mono"
 BBFILE_PATTERN_mono := "^${LAYERDIR}/"
