layer.conf: Default to building latest release of Mono (3.4.0)
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,3 +9,7 @@ BBFILE_COLLECTIONS += "mono"
 BBFILE_PATTERN_mono := "^${LAYERDIR}/"
 BBFILE_PRIORITY_mono = "1"
 
+# Default to 3.4.0
+PREFERRED_VERSION_mono ?= "3.4.0"
+PREFERRED_VERSION_mono-native ?= "3.4.0"
+
