conf: Support general recipe-foo folders
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,14 +2,14 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-mono/*/*.bb \
-            ${LAYERDIR}/recipes-mono/*/*.bbappend"
+BBFILES += "${LAYERDIR}/*/*/*.bb \
+            ${LAYERDIR}/*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "mono"
 BBFILE_PATTERN_mono := "^${LAYERDIR}/"
 BBFILE_PRIORITY_mono = "1"
 
-# Default to 3.12.0
+# Default to 3.12.1
 PREFERRED_VERSION_mono ?= "3.12.1"
 PREFERRED_VERSION_mono-native ?= "3.12.1"
 
