layer.conf: default to mono 5.4.1.6
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,8 @@ BBFILE_COLLECTIONS += "mono"
 BBFILE_PATTERN_mono := "^${LAYERDIR}/"
 BBFILE_PRIORITY_mono = "1"
 
-PREFERRED_VERSION_mono ?= "5.4.0.201"
-PREFERRED_VERSION_mono-native ?= "5.4.0.201"
+# Default tested with qemux86/qemuarm
+PREFERRED_VERSION_mono ?= "5.4.1.6"
+PREFERRED_VERSION_mono-native ?= "5.4.1.6"
 
 PREFERRED_VERSION_nuget ?= "3.5.0"
