layer.conf: define LAYERSERIES_COMPAT_mono = "sumo"
Newer versions of bitbake require each layer to explicitely state
their OE/Yocto release compatibility. The consensus is for each layer
to use the latest released version codename for the master branch.

Signed-off-by: Ioan-Adrian Ratiu <adrian.ratiu@ni.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -14,3 +14,5 @@ PREFERRED_VERSION_mono ?= "5.4.1.6"
 PREFERRED_VERSION_mono-native ?= "5.4.1.6"
 
 PREFERRED_VERSION_nuget ?= "3.5.0"
+
+LAYERSERIES_COMPAT_mono = "sumo"
