layer.conf: Add 'thud' to layer compatibility
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,4 +15,4 @@ PREFERRED_VERSION_mono-native ?= "5.12.0.226"
 
 PREFERRED_VERSION_nuget ?= "3.5.0"
 
-LAYERSERIES_COMPAT_mono = "sumo"
+LAYERSERIES_COMPAT_mono = "sumo thud"
