layer.conf: default to use nuget 4.7.0
This is bundled with the official Mono 5.14.0.177 build.

Signed-off-by: Böszörményi Zoltán <zboszor@pr.hu>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,6 +13,7 @@ BBFILE_PRIORITY_mono = "1"
 PREFERRED_VERSION_mono ?= "5.14.0.177"
 PREFERRED_VERSION_mono-native ?= "5.14.0.177"
 
-PREFERRED_VERSION_nuget ?= "4.3.0"
+PREFERRED_VERSION_nuget ?= "4.7.0"
+PREFERRED_VERSION_nuget-native ?= "4.7.0"
 
 LAYERSERIES_COMPAT_mono = "sumo thud"
