conf/layer.conf: Add PREFERRED_VERSION for msbuild and msbuild-native
Signed-off-by: Böszörményi Zoltán <zboszor@pr.hu>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,4 +16,7 @@ PREFERRED_VERSION_mono-native ?= "5.14.0.177"
 PREFERRED_VERSION_nuget ?= "4.7.0"
 PREFERRED_VERSION_nuget-native ?= "4.7.0"
 
+PREFERRED_VERSION_msbuild ?= "15.4"
+PREFERRED_VERSION_msbuild-native ?= "15.4"
+
 LAYERSERIES_COMPAT_mono = "sumo thud"
