layer.conf: Add 'warrior' to layer compatibility.
Signed-off-by: Robin Mugridge <robin.mugridge@oxinst.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,4 +19,4 @@ PREFERRED_VERSION_nuget-native ?= "4.7.0"
 PREFERRED_VERSION_msbuild ?= "15.4"
 PREFERRED_VERSION_msbuild-native ?= "15.4"
 
-LAYERSERIES_COMPAT_mono = "sumo thud"
+LAYERSERIES_COMPAT_mono = "sumo thud warrior"
