--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,6 +13,9 @@ BBFILE_PRIORITY_mono = "1"
 PREFERRED_VERSION_mono ?= "6.8.0.96"
 PREFERRED_VERSION_mono-native ?= "6.8.0.96"
 
+PREFERRED_VERSION_libgdiplus ?= "6.0.4"
+PREFERRED_VERSION_libgdiplus-native ?= "6.0.4"
+
 PREFERRED_VERSION_nuget ?= "4.7.0"
 PREFERRED_VERSION_nuget-native ?= "4.7.0"
 
