conf/layer.conf: Add gatesgarth to LAYERSERIES_COMPAT
Signed-off-by: Zoltán Böszörményi <zboszor@pr.hu>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,4 @@ PREFERRED_VERSION_nuget-native ?= "5.2.0"
 PREFERRED_VERSION_msbuild ?= "15.4"
 PREFERRED_VERSION_msbuild-native ?= "15.4"
 
-LAYERSERIES_COMPAT_mono = "thud warrior zeus dunfell"
+LAYERSERIES_COMPAT_mono = "thud warrior zeus dunfell gatesgarth"
