--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -27,7 +27,7 @@ jobs:
         fi
     - name: Checkout meta-mono
       uses: actions/checkout@v1
-    - name: Clone repos
+    - name: Update repo: poky
       run: |
         if [ ! -d 'poky' ]; then
           git clone git://git.yoctoproject.org/poky -b $GITHUB_REF_NAME
@@ -36,6 +36,19 @@ jobs:
           git pull origin $GITHUB_REF_NAME
           cd ..
         fi 
+    - name: Update repo: meta-openembedded
+      run: |
+        if [ ! -d 'meta-openembedded' ]; then
+          git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
+        else
+          cd meta-openembedded
+          git pull origin $GITHUB_REF_NAME
+          cd ..
+        fi
+    - name: Configure bitbake
+      run: |
+        cd poky
+         . ./oe-init-build-env 
 #    - name: Store artifacts
 #      uses: actions/upload-artifact@v2
 #      with:
