--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -49,6 +49,22 @@ jobs:
       run: |
         cd poky
          . ./oe-init-build-env 
+    - name: Setup configuration
+        if [ ! grep -q meta-mono conf/bblayers.conf ]; then
+          echo "BBLAYERS += '$WORKSPACE/meta-mono'" >> conf/bblayers.conf
+        fi
+        if [ ! grep -q meta-openembedded conf/bblayers.conf]; then
+          echo "BBLAYERS += '$WORKSPACE/meta-openembedded/meta-oe'" >> conf/bblayers.conf
+        fi
+        if [ ! grep -q rm_work conf/local.conf ]; then
+          echo "INHERIT += ' rm_work '" >> conf/local.conf
+        fi
+        if [ ! grep -q testimage conf/local.conf]; then
+          echo "INHERIT += ' testimage ' >> conf/local.conf
+        fi
+
+        export BB_ENV_EXTRAWHITE="$BB_ENV_EXTRAWHITE PREFERRED_VERSION_mono PREFERRED_VERSION_mono-native"
+        export BB_ENV_EXTRAWHITE="$BB_ENV_EXTRAWHITE MACHINE DL_DIR"
 #    - name: Store artifacts
 #      uses: actions/upload-artifact@v2
 #      with:
