--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -30,6 +30,7 @@ jobs:
       uses: actions/checkout@v1
     - name: Update repo poky
       run: |
+        cd $GITHUB_WORKSPACE
         if [ ! -d 'poky' ]; then
           git clone git://git.yoctoproject.org/poky -b $GITHUB_REF_NAME
         else
@@ -39,6 +40,7 @@ jobs:
         fi 
     - name: Update repo meta-openembedded
       run: |
+        cd $GITHUB_WORKSPACE
         if [ ! -d 'meta-openembedded' ]; then
           git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
         else
