--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -28,10 +28,13 @@ jobs:
         fi
     - name: Checkout meta-mono
       uses: actions/checkout@v1
+    - name: Relocate meta-mono
+      run: |
+        mkdir meta-mono.new
+        mv meta-mono meta-mono.new
+        mv meta-mono.new meta-mono
     - name: Update repo poky
       run: |
-        cd $GITHUB_WORKSPACE
-        cd ..
         if [ ! -d 'poky' ]; then
           git clone git://git.yoctoproject.org/poky -b $GITHUB_REF_NAME
         else
@@ -41,8 +44,6 @@ jobs:
         fi 
     - name: Update repo meta-openembedded
       run: |
-        cd $GITHUB_WORKSPACE
-        cd ..
         if [ ! -d 'meta-openembedded' ]; then
           git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
         else
