--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -30,9 +30,10 @@ jobs:
       uses: actions/checkout@v1
     - name: Relocate meta-mono
       run: |
-        mkdir meta-mono.new
-        mv * meta-mono.new || 1
-        ls -l
+        mkdir ../meta-mono.new
+        mv * ../meta-mono.new
+        cd ..
+        rm -Rf meta-mono
         mv meta-mono.new meta-mono
     - name: Update repo poky
       run: |
