--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -44,15 +44,15 @@ jobs:
           git pull origin $GITHUB_REF_NAME
           cd ..
         fi 
-    - name: Update repo meta-openembedded
-      run: |
-        if [ ! -d 'meta-openembedded' ]; then
-          git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
-        else
-          cd meta-openembedded
-          git pull origin $GITHUB_REF_NAME
-          cd ..
-        fi 
+#    - name: Update repo meta-openembedded
+#      run: |
+#        if [ ! -d 'meta-openembedded' ]; then
+#          git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
+#        else
+#          cd meta-openembedded
+#          git pull origin $GITHUB_REF_NAME
+#          cd ..
+#        fi 
     - name: Build
       run: |
          . ./poky/oe-init-build-env 
