--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -35,3 +35,21 @@ jobs:
         cd ..
         rm -Rf meta-mono
         mv meta-mono.new meta-mono
+     - name: Update repo poky
+      run: |
+        if [ ! -d 'poky' ]; then
+          git clone git://git.yoctoproject.org/poky -b $GITHUB_REF_NAME
+        else
+          cd poky
+          git pull origin $GITHUB_REF_NAME
+          cd ..
+        fi
+    - name: Update repo meta-openembedded
+      run: |
+        if [ ! -d 'meta-openembedded' ]; then
+          git clone https://github.com/openembedded/meta-openembedded.git -b $GITHUB_REF_NAME
+        else
+          cd meta-openembedded
+          git pull origin $GITHUB_REF_NAME
+          cd ..
+        fi 
