--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -53,3 +53,25 @@ jobs:
           git pull origin $GITHUB_REF_NAME
           cd ..
         fi 
+    - name: Build
+      run: |
+         . ./poky/oe-init-build-env
+        if [[ ! $(grep meta-mono/meta-mono/meta-mono conf/bblayers.conf) ]]; then
+          echo "BBLAYERS += '$WORKSPACE/meta-mono'" >> conf/bblayers.conf
+        fi
+        if [[ ! $(grep meta-openembedded conf/bblayers.conf) ]]; then
+          echo "BBLAYERS += '$WORKSPACE/meta-openembedded/meta-oe'" >> conf/bblayers.conf
+        fi
+        if [[ ! $(grep rm_work conf/local.conf) ]]; then
+          echo "INHERIT += ' rm_work '" >> conf/local.conf
+        fi
+        if [[ ! $(grep testimage conf/local.conf) ]]; then
+          echo "INHERIT += ' testimage '" >> conf/local.conf
+        fi
+
+        export BB_ENV_EXTRAWHITE='$BB_ENV_EXTRAWHITE PREFERRED_VERSION_mono PREFERRED_VERSION_mono-native'
+        export BB_ENV_EXTRAWHITE='$BB_ENV_EXTRAWHITE MACHINE DL_DIR'
+
+        export VERSION=6.12.0.154
+        export MACHINE=x86
+        env PREFERRED_VERSION_mono="${VERSION}" PREFERRED_VERSION_mono-native="${VERSION}" MACHINE="qemu${ARCH}" DL_DIR="$WORKSPACE/downloads" bitbake test-image-mono
