--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         mono_version: [6.12.0.154]
-        branch: [master]
+        branch: [honister]
         arch: [x86, arm]
     env:
       name: build-and-test
