--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: [self-hosted, linux]
     container:
       image: dynamicdevices/yocto-ci-build:latest
-      options: --network host -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
+      options: --privileged -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
     strategy:
       matrix:
         mono_version: [6.12.0.161]
