--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -10,7 +10,9 @@ on:
 jobs:
   build-and-test:
     runs-on: [self-hosted, linux]
-    container: dynamicdevices/yocto-ci-build:latest
+    container:
+      image: dynamicdevices/yocto-ci-build:latest
+      options: --privileged -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
     strategy:
       matrix:
         mono_version: [6.12.0.161]
