Just build honister
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -3,17 +3,8 @@ name: meta-mono
 on:
   push:
     branches:
-      - master
-      - master-next
-      - sumo
-      - thud
-      - warrior
-      - zeus
-      - dunfell
-      - gatesgarth
-      - hardknott
       - honister
-      - kirkstone
+      - honister-next
   pull_request:
 
 jobs:
