--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -76,3 +76,8 @@ jobs:
         export BB_ENV_EXTRAWHITE="${BB_ENV_EXTRAWHITE} MACHINE DL_DIR"
         export TERM=linux
         env PREFERRED_VERSION_mono="${MONO_VERSION}" PREFERRED_VERSION_mono-native="${MONO_VERSION}" MACHINE="qemu${ARCH}" DL_DIR="$GITHUB_WORKSPACE/downloads" bitbake test-image-mono -c testimage
+    - name: Store artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-image-mono-${{ github.sha }}
+        path: ./${BRANCH}/build/tmp/deploy/images/qemu${ARCH}
