CI_github: Specificy x86 tag for container
Really should be using multi-architecture containers but until
I work out how to do this use a specific x86 tag

Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -11,7 +11,7 @@ jobs:
   build-and-test:
     runs-on: [self-hosted, linux]
     container:
-      image: dynamicdevices/yocto-ci-build:latest
+      image: dynamicdevices/yocto-ci-build:x86
       options: --privileged -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
     strategy:
       matrix:
