--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -9,10 +9,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, X64]
     container:
       image: dynamicdevices/yocto-ci-build:latest
-      options: --privileged -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
+      options: --privileged --platform linux/amd64  -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
     strategy:
       matrix:
         mono_version: [6.12.0.161]
