CI_github: Build for x86-64 not x86
dotnet build fails to build for i686 target

Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         mono_version: [6.12.0.161]
         branch: [master]
-        arch: [x86, arm]
+        arch: [x86-64, arm]
     env:
       name: build-and-test
       MONO_VERSION: ${{ matrix.mono_version }}
