ci: build meta-mono master branch against kirkstone poky branch
building against the master branch of poky and meta-openembedded
will result in sporadic errors.

Signed-off-by: Ben Fekih, Hichem <hichem.f@live.de>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         mono_version: [6.12.0.161]
-        branch: [master]
+        branch: [kirkstone]
         arch: [x86-64, arm]
     env:
       name: build-and-test
