CI_github: Set timeout to ten hours
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build-and-test:
     runs-on: [self-hosted, linux, X64]
+    timeout-minutes: 600
     container:
       image: dynamicdevices/yocto-ci-build:latest
       options: --privileged --platform linux/amd64  -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
