--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - master-next
+      - langdale
   pull_request:
 
 jobs:
@@ -17,7 +18,7 @@ jobs:
     strategy:
       matrix:
         mono_version: [6.12.0.161]
-        branch: [kirkstone]
+        branch: [langdale]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
