layer.conf: Add langdale support

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,4 @@ PREFERRED_VERSION_nuget-native ?= "5.2.0"
 PREFERRED_VERSION_msbuild ?= "16.6"
 PREFERRED_VERSION_msbuild-native ?= "16.6"
 
-LAYERSERIES_COMPAT_mono = "dunfell gatesgarth hardknott honister kirkstone"
+LAYERSERIES_COMPAT_mono = "dunfell gatesgarth hardknott honister kirkstone langdale"
