--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -3,8 +3,7 @@ name: meta-mono
 on:
   push:
     branches:
-      - master
-      - master-next
+      - mickledore
   pull_request:
 
 jobs:
@@ -17,7 +16,7 @@ jobs:
     strategy:
       matrix:
         mono_version: [6.12.0.161]
-        branch: [kirkstone]
+        branch: [mickledore]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
