--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - master-next
+      - mickledore
   pull_request:
 
 jobs:
@@ -18,7 +19,7 @@ jobs:
       matrix:
         dotnet_version: [7.0.202]
         mono_version: [6.12.0.182]
-        branch: [langdale]
+        branch: [mickledore]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
