--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -17,7 +17,7 @@ jobs:
       options: --privileged --platform linux/amd64  -v /dev/net/tun:/dev/net/tun -v /dev/kvm:/dev/kvm
     strategy:
       matrix:
-        dotnet_version: [7.0.400]
+        dotnet_version: [7.0.404, 6.0.417]
         mono_version: [6.12.0.182]
         branch: [mickledore]
         arch: [x86-64, arm, arm64]
