--- a/.github/workflows/CI_github.yml
+++ b/.github/workflows/CI_github.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - master-next
-      - mickledore
+      - nanbeld
   pull_request:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       matrix:
         dotnet_version: [7.0.404, 6.0.417]
         mono_version: [6.12.0.182]
-        branch: [mickledore]
+        branch: [nanbeld]
         arch: [x86-64, arm, arm64]
     env:
       name: build-and-test
